--- a/environment.yml
+++ b/environment.yml
@@ -1,85 +1,85 @@
-name: /Users/snehilk/Desktop/Coding/floodsafe/envs
+name: envs
 channels:
   - conda-forge
 dependencies:
   - appdirs=1.4.4=pyh9f0ad1d_0
   - autopep8=2.0.1=pyhd8ed1ab_0
-  - brotli=1.0.9=h1a8c8d9_8
-  - brotli-bin=1.0.9=h1a8c8d9_8
-  - brotlipy=0.7.0=py311he2be06e_1005
-  - bzip2=1.0.8=h3422bc3_4
+  - brotli=1.0.9=hb7f2c08_8
+  - brotli-bin=1.0.9=hb7f2c08_8
+  - brotlipy=0.7.0=py311h5547dcb_1005
+  - bzip2=1.0.8=h0d85af4_4
   - ca-certificates=2022.12.7=h4653dfc_0
   - certifi=2022.12.7=pyhd8ed1ab_0
-  - cffi=1.15.1=py311hae827db_3
+  - cffi=1.15.1=py311ha86e640_3
   - charset-normalizer=2.1.1=pyhd8ed1ab_0
   - click=8.1.3=unix_pyhd8ed1ab_2
-  - contourpy=1.0.7=py311hd6ee22a_0
-  - cryptography=39.0.0=py311h507f6e9_0
+  - contourpy=1.0.7=py311hd2070f0_0
+  - cryptography=39.0.0=py311h61927ef_0
   - cycler=0.11.0=pyhd8ed1ab_0
-  - fonttools=4.38.0=py311he2be06e_1
-  - freetype=2.12.1=hd633e50_1
+  - fonttools=4.38.0=py311h5547dcb_1
+  - freetype=2.12.1=h3f81eb7_1
   - idna=3.4=pyhd8ed1ab_0
   - joblib=1.2.0=pyhd8ed1ab_0
-  - jpeg=9e=he4db4b2_2
-  - kiwisolver=1.4.4=py311hd6ee22a_1
-  - lcms2=2.14=h481adae_1
-  - lerc=4.0.0=h9a09cb3_0
-  - libblas=3.9.0=16_osxarm64_openblas
-  - libbrotlicommon=1.0.9=h1a8c8d9_8
-  - libbrotlidec=1.0.9=h1a8c8d9_8
-  - libbrotlienc=1.0.9=h1a8c8d9_8
-  - libcblas=3.9.0=16_osxarm64_openblas
-  - libcxx=14.0.6=h2692d47_0
-  - libdeflate=1.17=h1a8c8d9_0
-  - libffi=3.4.2=h3422bc3_5
-  - libgfortran=5.0.0=11_3_0_hd922786_27
-  - libgfortran5=11.3.0=hdaf2cc0_27
-  - libjpeg-turbo=2.1.4=h1a8c8d9_0
-  - liblapack=3.9.0=16_osxarm64_openblas
-  - libopenblas=0.3.21=openmp_hc731615_3
-  - libpng=1.6.39=h76d750c_0
-  - libsqlite=3.40.0=h76d750c_0
-  - libtiff=4.5.0=h5dffbdd_2
-  - libwebp-base=1.2.4=h57fd34a_0
-  - libxcb=1.13=h9b22ae9_1004
-  - libzlib=1.2.13=h03a7124_4
-  - llvm-openmp=15.0.7=h7cfbb63_0
-  - matplotlib=3.6.3=py311ha1ab1f8_0
-  - matplotlib-base=3.6.3=py311h99a5f44_0
+  - jpeg=9e=hac89ed1_2
+  - kiwisolver=1.4.4=py311hd2070f0_1
+  - lcms2=2.14=h29502cd_1
+  - lerc=4.0.0=hb486fe8_0
+  - libblas=3.9.0=16_osx64_openblas
+  - libbrotlicommon=1.0.9=hb7f2c08_8
+  - libbrotlidec=1.0.9=hb7f2c08_8
+  - libbrotlienc=1.0.9=hb7f2c08_8
+  - libcblas=3.9.0=16_osx64_openblas
+  - libcxx=14.0.6=hccf4f1f_0
+  - libdeflate=1.17=hac1461d_0
+  - libffi=3.4.2=h0d85af4_5
+  - libgfortran=5.0.0=11_3_0_h97931a8_27
+  - libgfortran5=11.3.0=h082f757_27
+  - libjpeg-turbo=2.1.4=hb7f2c08_0
+  - liblapack=3.9.0=16_osx64_openblas
+  - libopenblas=0.3.21=openmp_h429af6e_3
+  - libpng=1.6.39=ha978bb4_0
+  - libsqlite=3.40.0=ha978bb4_0
+  - libtiff=4.5.0=hee9004a_2
+  - libwebp-base=1.2.4=h775f41a_0
+  - libxcb=1.13=h0d85af4_1004
+  - libzlib=1.2.13=hfd90126_4
+  - llvm-openmp=15.0.7=h61d9ccf_0
+  - matplotlib=3.6.3=py311h6eed73b_0
+  - matplotlib-base=3.6.3=py311h2bf763f_0
   - munkres=1.1.4=pyh9f0ad1d_0
-  - ncurses=6.3=h07bb92c_1
-  - numpy=1.24.1=py311ha92fb03_0
-  - openjpeg=2.5.0=hbc2ba62_2
-  - openssl=3.0.7=h03a7124_1
+  - ncurses=6.3=h96cf925_1
+  - numpy=1.24.1=py311h62c7003_0
+  - openjpeg=2.5.0=h13ac156_2
+  - openssl=3.0.7=hfd90126_1
   - packaging=23.0=pyhd8ed1ab_0
-  - pillow=9.4.0=py311h6425a22_0
+  - pillow=9.4.0=py311hafe3759_0
   - pip=22.3.1=pyhd8ed1ab_0
   - pooch=1.6.0=pyhd8ed1ab_0
-  - pthread-stubs=0.4=h27ca646_1001
+  - pthread-stubs=0.4=hc929b4f_1001
   - pycodestyle=2.10.0=pyhd8ed1ab_0
   - pycparser=2.21=pyhd8ed1ab_0
   - pyopenssl=23.0.0=pyhd8ed1ab_0
   - pyparsing=3.0.9=pyhd8ed1ab_0
   - pysocks=1.7.1=pyha2e5f31_6
-  - python=3.11.0=h3ba56d0_1_cpython
+  - python=3.11.0=he7542f4_1_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-dotenv=0.21.0=pyhd8ed1ab_0
+  - python-dotenv=0.21.1=pyhd8ed1ab_0
   - python_abi=3.11=3_cp311
-  - readline=8.1.2=h46ed386_0
+  - readline=8.1.2=h3899abd_0
   - requests=2.28.2=pyhd8ed1ab_0
-  - scikit-learn=1.2.0=py311hba7d9bc_0
-  - scipy=1.10.0=py311h0bcca16_0
-  - setuptools=66.1.0=pyhd8ed1ab_0
+  - scikit-learn=1.2.0=py311h087fafe_0
+  - scipy=1.10.0=py311h939689b_0
+  - setuptools=66.1.1=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
   - threadpoolctl=3.1.0=pyh8a188c0_0
-  - tk=8.6.12=he1e0b03_0
+  - tk=8.6.12=h5dbffcc_0
   - tomli=2.0.1=pyhd8ed1ab_0
-  - tornado=6.2=py311he2be06e_1
+  - tornado=6.2=py311h5547dcb_1
   - tzdata=2022g=h191b570_0
   - urllib3=1.26.14=pyhd8ed1ab_0
   - wheel=0.38.4=pyhd8ed1ab_0
-  - xorg-libxau=1.0.9=h27ca646_0
-  - xorg-libxdmcp=1.1.3=h27ca646_0
-  - xz=5.2.6=h57fd34a_0
-  - zstd=1.5.2=hf913c23_6
-prefix: /Users/snehilk/Desktop/Coding/floodsafe/envs
+  - xorg-libxau=1.0.9=h35c211d_0
+  - xorg-libxdmcp=1.1.3=h35c211d_0
+  - xz=5.2.6=h775f41a_0
+  - zstd=1.5.2=hbc0c0cd_6
+prefix: ./envs
