--- a/environment.yml
+++ b/environment.yml
@@ -1,85 +1,163 @@
-name: envs
+name: base
 channels:
+  - apple
   - conda-forge
 dependencies:
-  - appdirs=1.4.4=pyh9f0ad1d_0
+  - appnope=0.1.3=pyhd8ed1ab_0
+  - asttokens=2.0.8=pyhd8ed1ab_0
+  - async_generator=1.10=py_0
+  - attrs=22.2.0=pyh71513ae_0
   - autopep8=2.0.1=pyhd8ed1ab_0
-  - brotli=1.0.9=hb7f2c08_8
-  - brotli-bin=1.0.9=hb7f2c08_8
-  - brotlipy=0.7.0=py311h5547dcb_1005
-  - bzip2=1.0.8=h0d85af4_4
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - brotlipy=0.7.0=py310hf8d0d8f_1004
+  - bzip2=1.0.8=h3422bc3_4
+  - c-ares=1.18.1=h3422bc3_0
   - ca-certificates=2022.12.7=h4653dfc_0
+  - cached-property=1.5.2=hd8ed1ab_1
+  - cached_property=1.5.2=pyha770c72_1
   - certifi=2022.12.7=pyhd8ed1ab_0
-  - cffi=1.15.1=py311ha86e640_3
+  - cffi=1.15.1=py310he00a5c5_0
   - charset-normalizer=2.1.1=pyhd8ed1ab_0
   - click=8.1.3=unix_pyhd8ed1ab_2
-  - contourpy=1.0.7=py311hd2070f0_0
-  - cryptography=39.0.0=py311h61927ef_0
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - fonttools=4.38.0=py311h5547dcb_1
-  - freetype=2.12.1=h3f81eb7_1
+  - colorama=0.4.5=pyhd8ed1ab_0
+  - conda=22.11.1=py310hbe9552e_1
+  - conda-package-handling=1.9.0=py310h8e9501a_0
+  - cryptography=37.0.4=py310h94bb23d_0
+  - debugpy=1.6.3=py310hc6dc59f_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - entrypoints=0.4=pyhd8ed1ab_0
+  - exceptiongroup=1.1.0=pyhd8ed1ab_0
+  - executing=1.1.0=pyhd8ed1ab_0
+  - grpcio=1.46.3=py310h10ad472_0
+  - h11=0.14.0=pyhd8ed1ab_0
+  - h5py=3.6.0=nompi_py310hb8bbf05_100
+  - hdf5=1.12.1=nompi_hf9525e8_104
   - idna=3.4=pyhd8ed1ab_0
-  - joblib=1.2.0=pyhd8ed1ab_0
-  - jpeg=9e=hac89ed1_2
-  - kiwisolver=1.4.4=py311hd2070f0_1
-  - lcms2=2.14=h29502cd_1
-  - lerc=4.0.0=hb486fe8_0
-  - libblas=3.9.0=16_osx64_openblas
-  - libbrotlicommon=1.0.9=hb7f2c08_8
-  - libbrotlidec=1.0.9=hb7f2c08_8
-  - libbrotlienc=1.0.9=hb7f2c08_8
-  - libcblas=3.9.0=16_osx64_openblas
-  - libcxx=14.0.6=hccf4f1f_0
-  - libdeflate=1.17=hac1461d_0
-  - libffi=3.4.2=h0d85af4_5
-  - libgfortran=5.0.0=11_3_0_h97931a8_27
-  - libgfortran5=11.3.0=h082f757_27
-  - libjpeg-turbo=2.1.4=hb7f2c08_0
-  - liblapack=3.9.0=16_osx64_openblas
-  - libopenblas=0.3.21=openmp_h429af6e_3
-  - libpng=1.6.39=ha978bb4_0
-  - libsqlite=3.40.0=ha978bb4_0
-  - libtiff=4.5.0=hee9004a_2
-  - libwebp-base=1.2.4=h775f41a_0
-  - libxcb=1.13=h0d85af4_1004
-  - libzlib=1.2.13=hfd90126_4
-  - llvm-openmp=15.0.7=h61d9ccf_0
-  - matplotlib=3.6.3=py311h6eed73b_0
-  - matplotlib-base=3.6.3=py311h2bf763f_0
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - ncurses=6.3=h96cf925_1
-  - numpy=1.24.1=py311h62c7003_0
-  - openjpeg=2.5.0=h13ac156_2
-  - openssl=3.0.7=hfd90126_1
-  - packaging=23.0=pyhd8ed1ab_0
-  - pillow=9.4.0=py311hafe3759_0
-  - pip=22.3.1=pyhd8ed1ab_0
-  - pooch=1.6.0=pyhd8ed1ab_0
-  - pthread-stubs=0.4=hc929b4f_1001
+  - ipykernel=6.16.0=pyh736e0ef_0
+  - ipython=8.5.0=pyhd1c38e8_1
+  - jedi=0.18.1=pyhd8ed1ab_2
+  - jupyter_client=7.3.5=pyhd8ed1ab_0
+  - jupyter_core=4.11.1=py310hbe9552e_0
+  - krb5=1.19.3=hf9b2bbe_0
+  - libblas=3.9.0=16_osxarm64_openblas
+  - libcblas=3.9.0=16_osxarm64_openblas
+  - libcurl=7.83.1=h2fcd78c_0
+  - libcxx=14.0.6=h2692d47_0
+  - libedit=3.1.20191231=hc8eb9b7_2
+  - libev=4.33=h642e427_1
+  - libffi=3.4.2=h3422bc3_5
+  - libgfortran=5.0.0=11_3_0_hd922786_25
+  - libgfortran5=11.3.0=hdaf2cc0_25
+  - liblapack=3.9.0=16_osxarm64_openblas
+  - libnghttp2=1.47.0=h232270b_1
+  - libopenblas=0.3.21=openmp_hc731615_3
+  - libprotobuf=3.19.4=hccf11d3_0
+  - libsodium=1.0.18=h27ca646_1
+  - libsqlite=3.39.3=h76d750c_0
+  - libssh2=1.10.0=hb80f160_3
+  - libzlib=1.2.12=h03a7124_3
+  - llvm-openmp=14.0.4=hd125106_0
+  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
+  - ncurses=6.3=h07bb92c_1
+  - nest-asyncio=1.5.5=pyhd8ed1ab_0
+  - numpy=1.23.2=py310h127c7cf_0
+  - openssl=1.1.1s=h03a7124_1
+  - outcome=1.2.0=pyhd8ed1ab_0
+  - packaging=21.3=pyhd8ed1ab_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - pexpect=4.8.0=pyh9f0ad1d_2
+  - pickleshare=0.7.5=py_1003
+  - pip=22.2.2=pyhd8ed1ab_0
+  - pluggy=1.0.0=pyhd8ed1ab_5
+  - prompt-toolkit=3.0.31=pyha770c72_0
+  - protobuf=3.19.4=py310h1b49c16_0
+  - psutil=5.9.2=py310h8e9501a_0
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pure_eval=0.2.2=pyhd8ed1ab_0
   - pycodestyle=2.10.0=pyhd8ed1ab_0
+  - pycosat=0.6.3=py310hf8d0d8f_1010
   - pycparser=2.21=pyhd8ed1ab_0
-  - pyopenssl=23.0.0=pyhd8ed1ab_0
+  - pygments=2.13.0=pyhd8ed1ab_0
+  - pyopenssl=22.0.0=pyhd8ed1ab_1
   - pyparsing=3.0.9=pyhd8ed1ab_0
   - pysocks=1.7.1=pyha2e5f31_6
-  - python=3.11.0=he7542f4_1_cpython
+  - python=3.10.6=hbce4517_0_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
   - python-dotenv=0.21.1=pyhd8ed1ab_0
-  - python_abi=3.11=3_cp311
-  - readline=8.1.2=h3899abd_0
-  - requests=2.28.2=pyhd8ed1ab_0
-  - scikit-learn=1.2.0=py311h087fafe_0
-  - scipy=1.10.0=py311h939689b_0
-  - setuptools=66.1.1=pyhd8ed1ab_0
+  - python_abi=3.10=2_cp310
+  - pyzmq=24.0.1=py310hc407298_0
+  - readline=8.1.2=h46ed386_0
+  - requests=2.28.1=pyhd8ed1ab_1
+  - ruamel.yaml=0.17.21=py310h8e9501a_2
+  - ruamel.yaml.clib=0.2.7=py310h8e9501a_1
+  - ruamel_yaml=0.15.80=py310h02f21da_1007
+  - selenium=4.7.2=pyhd8ed1ab_0
+  - setuptools=65.4.0=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
-  - threadpoolctl=3.1.0=pyh8a188c0_0
-  - tk=8.6.12=h5dbffcc_0
+  - sniffio=1.3.0=pyhd8ed1ab_0
+  - sortedcontainers=2.4.0=pyhd8ed1ab_0
+  - stack_data=0.5.1=pyhd8ed1ab_0
+  - tensorflow-deps=2.10.0=0
+  - tk=8.6.12=he1e0b03_0
   - tomli=2.0.1=pyhd8ed1ab_0
-  - tornado=6.2=py311h5547dcb_1
-  - tzdata=2022g=h191b570_0
-  - urllib3=1.26.14=pyhd8ed1ab_0
-  - wheel=0.38.4=pyhd8ed1ab_0
-  - xorg-libxau=1.0.9=h35c211d_0
-  - xorg-libxdmcp=1.1.3=h35c211d_0
-  - xz=5.2.6=h775f41a_0
-  - zstd=1.5.2=hbc0c0cd_6
-prefix: ./envs
+  - toolz=0.12.0=pyhd8ed1ab_0
+  - tornado=6.2=py310h02f21da_0
+  - tqdm=4.64.1=pyhd8ed1ab_0
+  - traitlets=5.4.0=pyhd8ed1ab_0
+  - trio=0.22.0=py310hbe9552e_1
+  - trio-websocket=0.9.2=pyhd8ed1ab_0
+  - typing_extensions=4.4.0=pyha770c72_0
+  - tzdata=2022d=h191b570_0
+  - urllib3=1.26.11=pyhd8ed1ab_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
+  - webdriver-manager=3.8.5=pyhd8ed1ab_0
+  - wheel=0.37.1=pyhd8ed1ab_0
+  - wsproto=1.2.0=pyhd8ed1ab_0
+  - xz=5.2.6=h57fd34a_0
+  - yaml=0.2.5=h3422bc3_2
+  - zeromq=4.3.4=hbdafb3b_1
+  - zlib=1.2.12=h03a7124_3
+  - pip:
+      - absl-py==1.2.0
+      - astunparse==1.6.3
+      - cachetools==5.2.0
+      - contourpy==1.0.5
+      - cycler==0.11.0
+      - flatbuffers==22.9.24
+      - fonttools==4.37.4
+      - gast==0.4.0
+      - google-auth==2.12.0
+      - google-auth-oauthlib==0.4.6
+      - google-pasta==0.2.0
+      - keras==2.10.0
+      - keras-preprocessing==1.1.2
+      - kiwisolver==1.4.4
+      - libclang==14.0.6
+      - markdown==3.4.1
+      - markupsafe==2.1.1
+      - matplotlib==3.6.0
+      - oauthlib==3.2.1
+      - opencv-python==4.6.0.66
+      - opt-einsum==3.3.0
+      - pandas==1.5.0
+      - pillow==9.2.0
+      - pyasn1==0.4.8
+      - pyasn1-modules==0.2.8
+      - pytz==2022.2.1
+      - requests-oauthlib==1.3.1
+      - rsa==4.9
+      - seaborn==0.12.0
+      - tensorboard==2.10.1
+      - tensorboard-data-server==0.6.1
+      - tensorboard-plugin-wit==1.8.1
+      - tensorflow-estimator==2.10.0
+      - tensorflow-macos==2.10.0
+      - tensorflow-metal==0.6.0
+      - termcolor==2.0.1
+      - torch==1.13.0
+      - typing-extensions==4.3.0
+      - werkzeug==2.2.2
+      - wrapt==1.14.1
+prefix: /Users/snehilk/miniforge3
