--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,7 @@ channels:
   - apple
   - conda-forge
 dependencies:
+  - anyio=3.6.1=py310hbe9552e_0
   - appnope=0.1.3=pyhd8ed1ab_0
   - asttokens=2.0.8=pyhd8ed1ab_0
   - async_generator=1.10=py_0
@@ -30,6 +31,7 @@ dependencies:
   - entrypoints=0.4=pyhd8ed1ab_0
   - exceptiongroup=1.1.0=pyhd8ed1ab_0
   - executing=1.1.0=pyhd8ed1ab_0
+  - fastapi=0.89.1=pyhd8ed1ab_0
   - grpcio=1.46.3=py310h10ad472_0
   - h11=0.14.0=pyhd8ed1ab_0
   - h5py=3.6.0=nompi_py310hb8bbf05_100
@@ -79,6 +81,7 @@ dependencies:
   - pycodestyle=2.10.0=pyhd8ed1ab_0
   - pycosat=0.6.3=py310hf8d0d8f_1010
   - pycparser=2.21=pyhd8ed1ab_0
+  - pydantic=1.10.4=py310h8e9501a_1
   - pygments=2.13.0=pyhd8ed1ab_0
   - pyopenssl=22.0.0=pyhd8ed1ab_1
   - pyparsing=3.0.9=pyhd8ed1ab_0
@@ -99,6 +102,7 @@ dependencies:
   - sniffio=1.3.0=pyhd8ed1ab_0
   - sortedcontainers=2.4.0=pyhd8ed1ab_0
   - stack_data=0.5.1=pyhd8ed1ab_0
+  - starlette=0.22.0=pyhd8ed1ab_0
   - tensorflow-deps=2.10.0=0
   - tk=8.6.12=he1e0b03_0
   - tomli=2.0.1=pyhd8ed1ab_0
@@ -111,6 +115,7 @@ dependencies:
   - typing_extensions=4.4.0=pyha770c72_0
   - tzdata=2022d=h191b570_0
   - urllib3=1.26.11=pyhd8ed1ab_0
+  - uvicorn=0.20.0=py310hbe9552e_1
   - wcwidth=0.2.5=pyh9f0ad1d_2
   - webdriver-manager=3.8.5=pyhd8ed1ab_0
   - wheel=0.37.1=pyhd8ed1ab_0
